# battleship_py

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
battleapi/: abstract.py  dto.py  exceptions.py  interfaces.py
battleapi/api/: controller.py  controller_api.py  dto.py  game_controller.py  persistance_api.py  persistence.py
battleapi/db/: in_memory_db_client.py
battleapi/implementations/: id_generator.py  in_memory_db_client.py
battleapi/logic/: board.py  configs.py  exceptions.py  game.py  models.py  player.py  session.py  utils.py
battleapi/logic/configuration/: classic_config.py  custom_config.py  game_config.py
battleapi/logic/models/: cell.py  field.py  ships.py
battleapi/utils/: id_generator.py
battleflask/: flask_app.py  flask_app_config.py
battleflask/app/: context.py  exceptions.py  validation_utils.py
battleflask/app/controllers/: constants.py  game_common.py  game_controller.py  gameplay.py  index.py  index_controller.py  players.py  preparation.py  render_utils.py  request_utils.py  utils.py
battleflask/static/css/: board.css
battleflask/templates/: base.html
battleflask/templates/game/: game_session_finish_page.html  game_session_gameplay_page.html  game_session_prepare_page.html  game_session_wait_page.html
battleflask/templates/index/: index_page.html  join_game_page.html  new_game_page.html
docs/: coverage_2022-10-16.txt
tests/battleapi/api/: test_controller.py  test_controller_api.py  test_persistence.py  test_persistence_api.py
tests/battleapi/db/: test_in_memory_db_client.py
(+9 files in other folders)
