[tool.poetry]
name = "battleship-py"
version = "0.1.0"
description = "Classic board game for 2 players"
authors = ["Oleksandr Kostenko <sanyokkua@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "battleapi"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Flask = "^2.2.2"
Flask-RESTful = "^0.3.9"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pylama = "^8.4.1"
autopep8 = "^1.7.0"
pylint = "^2.15.2"
bandit = "^1.7.4"
flake8-broken-line = "^0.5.0"
flake8-bugbear = "^22.9.11"
flake8-builtins = "^1.5.3"
flake8-isort = "^4.2.0"
flake8-mutable = "^1.2.0"
isort = "^5.10.1"
pyinstaller = "^5.4.1"
pep8 = "^1.7.1"
mypy = "^0.971"
black = "^22.8.0"
autoflake = "^1.5.3"
pytest = "^7.1.3"
coverage = "^6.4.4"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
